--- a/latihan4.html
+++ b/latihan4.html
@@ -1,4 +1,4 @@
-html lang="en">
+<html lang="en">
 <head type="teks">
     <link rel="icon" type="image/png" href="favicon.ico">
     <title>Bisnis Online
