--- a/latihan4.html
+++ b/latihan4.html
@@ -48,5 +48,54 @@
        <p>Dengan layanan jasa bisnis ekspor kelapa sawit online kami, Anda dapat mengalami kemudahan dan keuntungan dalam mengakses pasar global dengan cepat dan efisien. Kami menawarkan solusi lengkap untuk memfasilitasi ekspor kelapa sawit Anda, mulai dari manajemen logistik, pemasaran digital, hingga pemrosesan pesanan. Dengan pengalaman dan keahlian kami dalam industri ini, kami berkomitmen untuk membantu Anda memperluas jangkauan pasar, meningkatkan efisiensi operasional, dan meraih kesuksesan dalam perdagangan internasional.</p>
             </div>
     </div>
-</body>
-</html>
+       <hr><hr> 
+ <form action="/data_matkul_fav.php/"> 
+             <label for="nama">Username:</label><br> 
+             <input type="text" id="nama" name="nama"><br> 
+                 <br> 
+             <label for="ID">ID Number:</label><br> 
+             <input type="text" id="ID" name="ID"><br> 
+  
+             <br><hr> 
+  
+             <p><b>Kapan Awal Menjadi Teman Tulus?</b></p> 
+             <input type="radio" id="2011" name="year" value="2011"> 
+             <label for="2011">Sejak 2011</label> 
+                 <br> 
+             <input type="radio" id="2014" name="year" value="2014"> 
+             <label for="2014">Setelah Album "Gajah"</label> 
+                 <br> 
+             <input type="radio" id="2016" name="year" value="2016"> 
+             <label for="2016">2016 dan seterusnya</label> 
+                 <br> 
+             <input type="radio" id="2022" name="year" value="2022"> 
+             <label for="2022">Newbie (2022 - saat ini)</label> 
+  
+             <br><hr> 
+  
+             <p><b>Album Favorit</b></p> 
+             <input type="checkbox" id="tulus" name="album" value="Album Tulus"> 
+             <label for="tulus">TULUS<label> 
+                 <br> 
+             <input type="checkbox" id="gajah" name="album" value="Album Gajah"> 
+             <label for="gajah">GAJAH<label> 
+                 <br> 
+             <input type="checkbox" id="monokrom" name="album" value="Album Monokrom"> 
+             <label for="monokrom">MONOKROM<label> 
+                 <br> 
+             <input type="checkbox" id="konser" name="album" value="Album Konser"> 
+             <label for="konser">Tulus: Langsung Dari Konser Monokrom Jakarta<label> 
+                 <br> 
+             <input type="checkbox" id="manusia" name="album" value="Album Manusia"> 
+             <label for="manusia">MANUSIA<label> 
+  
+                 <br><br><hr> 
+  
+             <button type="button" onclick="alert ('thank you!')">Done</button> 
+             <button type="submit" onclick="alert ('thankyou')">Submit here</button> 
+             <button type="reset">reset</button> 
+         </form> 
+         </div> 
+  
+ </body> 
+ </html>
